--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bio | Hem </title>
+    <title>Biography | HBG </title>
     <!-- Link To CSS -->
     <link rel="stylesheet" href="./css/style.css">
     <!-- Box Icons -->
@@ -54,7 +54,7 @@
                 <img src="https://nicksaraev.com/content/images/2022/04/image-8-1.png" alt="">
             </div>
             <div class="about-text">
-                <p>Currently working as associate software engineer AI/ML in IT company.</p>
+                <p>Having 1.5 years of experience on tech industry with a great passionate and curiosity on AI & Data science, currently working as Associate Software engineer-AI/ML in Genese Solution and experienced on AWS,Computer vision and NLP projects.</p>
                 <a href="#" class="btn">Download CV</a>
             </div>
         </div>
