--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <img src="https://nicksaraev.com/content/images/2022/04/image-8-1.png" alt="">
             </div>
             <div class="about-text">
-                <p>Having 1.5 years of experience on tech industry with a great passionate and curiosity on AI & Data science, currently working as Associate Software engineer-AI/ML in Genese Solution and experienced on AWS,Computer vision and NLP projects.</p>
+                <p>Having 1.5 years of experience on IT industry with a great passionate and curiosity on AI & Data science, currently working as Associate Software engineer-AI/ML in Genese Solution and experienced on AWS,Computer vision and NLP projects.</p>
                 <a href="#" class="btn">Download CV</a>
             </div>
         </div>
