modified the title

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="home-text">
             <span>Hello, there</span>
-            <h1>Technophile</h1>
+            <h1>Hope, You are doing Well !</h1>
             <p>Curious about Artificial intelligence,deep learning,Machine Learning,cloud computing,data science,big data,blockchain, AR and VR</p>
             <a href="#contact" class="btn">Contact Me</a>
         </div>
