--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- About -->
     <section class="about" id="about">
         <div class="heading">
-            <h2>About Hem</h2>
+            <h2>About  Hem 's Profile </h2>
             <span>Introduction</span>
         </div>
         <!-- About Content -->
@@ -149,7 +149,7 @@
     </div>
     <!-- Copyright -->
     <div class="copyright">
-        <p>Designed By <a href="">Curiosity Hearts</a> | Copyright © 2022 </p>
+        <p>Designed By <a href="">The Amazing Grace </a> | Copyright © 2022 </p>
     </div>
  
  
