--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
             <img src="https://artsformysake.files.wordpress.com/2020/08/face-id-glitch.gif" alt="" > 
         </div>
         <div class="home-text">
-            <span>Hello, there</span>
-            <h1>Hope, You are doing Well !</h1>
-            <p>Curious about Artificial intelligence,deep learning,Machine Learning,cloud computing,data science,big data,blockchain, AR and VR</p>
+            <span>Hello EveryOne </span>
+            <h1>Hope,You are doing Well</h1>
             <a href="#contact" class="btn">Contact Me</a>
         </div>
  
