--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="home" id="home">
         </div>
         <div class="home-img">
-            <img src="https://artsformysake.files.wordpress.com/2020/08/face-id-glitch.gif" alt="" > 
+            <img src="https://i.gifer.com/Yipj.gif" alt="" > 
         </div>
         <div class="home-text">
             <span>Hello EveryOne </span>
