--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- About -->
     <section class="about" id="about">
         <div class="heading">
-            <h2>About  Hem 's Profile </h2>
+            <h2> Hem 's Profile </h2>
             <span>Introduction</span>
         </div>
         <!-- About Content -->
