--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
             <a href="#"><i class='bx bxl-twitter' ></i></a>
             <a href="https://www.linkedin.com/in/hembahadurgurung555/"><i class='bx bxl-linkedin' ></i></a>
             <a href="https://hem-bahadur-gurung5739.medium.com/"><i class='bx bxl-medium' ></i></a>
+            <a href="https://www.youtube.com/watch?v=T9QVW1ndP_E/"><i class='bx bxl-youtube' ></i></a>
         </div>
  
     </div>
