--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
             <a href="https://www.linkedin.com/in/hembahadurgurung555/"><i class='bx bxl-linkedin' ></i></a>
             <a href="https://hem-bahadur-gurung5739.medium.com/"><i class='bx bxl-medium' ></i></a>
             <a href="https://www.youtube.com/watch?v=T9QVW1ndP_E/"><i class='bx bxl-youtube' ></i></a>
+            <a href="https://www.tiktok.com/@hem5050/video/7207061146304646401?lang=en/"><i class='bx bxl-tiktok' ></i></a>
         </div>
  
     </div>
