--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
         </div>
         <div class="footer-social">
-            <a href="#"><i class='bx bxl-twitter' ></i></a>
+            <a href="https://twitter.com/Hem2023/"><i class='bx bxl-twitter' ></i></a>
             <a href="https://www.linkedin.com/in/hembahadurgurung555/"><i class='bx bxl-linkedin' ></i></a>
             <a href="https://hem-bahadur-gurung5739.medium.com/"><i class='bx bxl-medium' ></i></a>
             <a href="https://www.youtube.com/watch?v=T9QVW1ndP_E/"><i class='bx bxl-youtube' ></i></a>
