--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navbar -->
     <header>
-        <a href="#"><img id="logo" src="hemaiz.png" </a>
+        <a href="#"><img id="logo" src="r.png" </a>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
@@ -32,11 +32,11 @@
     <section class="home" id="home">
         </div>
         <div class="home-img">
-            <img src="https://i.gifer.com/Yipj.gif" alt="" > 
+            <img src="aws.jpg" alt="" > 
         </div>
         <div class="home-text">
-            <span>Hello EveryOne </span>
-            <h1>Hope,You are doing Well</h1>
+            <span>Hello EveryOne 👋</span>
+            <h1>Hope,You are doing Well 😍</h1>
             <!---- <a href="#contact" class="btn">Contact Me</a>  -->
         </div>
  
@@ -50,10 +50,10 @@
         <!-- About Content -->
         <div class="about-container">
             <div class="about-img">
-                <img src="https://nicksaraev.com/content/images/2022/04/image-8-1.png" alt="">
+                <img src="profile.jpg" alt="">
             </div>
             <div class="about-text">
-                <p>Having 1.5 years of experience on IT industry and working  experienced on AWS,Computer vision and NLP projects.</p>
+                <p> Having One year of experience on Tech industry and interested in working in AWS,Computer Vision,NLP ,Prompt Engineering and data analytics Project</p>
                 <a href="#" class="btn">Download CV</a>
             </div>
         </div>
@@ -62,7 +62,7 @@
     <section class="skills" id="skills">
         <div class="heading">
             <h2>Skills</h2>
-            <span>“You don't hire for skills, you hire for attitude. You can always teach skills.” ― Herb Kelleher</span>
+            <span>Work Mode On 🔥 </span>
         </div>
  
     </section>
@@ -103,10 +103,10 @@
     </div>
     <div class="blogs-content">
         <div class="blogs-img">
-            <h3>WEB5: DECENTRALIZED WEB PLATFORM</h3>
+            <h3>First AWS Deep Racer League in Nepal</h3>
             <img src="#" alt="">
-            <p class="subtext">This is my nlp research project.</p>
-            <p class="subtext"><a class="project-link" href="blog.html">View here</a></p>
+            <p class="subtext"> Participation on Deep Racer League</p>
+            <p class="subtext"><a class="project-link" href="https://hembahadurgurung.medium.com/nepal-set-new-world-record-lap-time-of-7-062-sec-at-the-first-ever-deep-racer-league-nepal-in-2022-85feeb86fc3a">View here</a></p>
         </div>
 </section>
     <!-- Contact -->
@@ -129,19 +129,19 @@
         <h2>Contact Info</h2>
         <div class="information">
             <!-- Box 2 -->
-            <div class="info-box">
+            <!-- <div class="info-box">
                 <i class='bx bxs-phone' ></i>
                 <span></span>
-            </div>
+            </div> -->
             <!-- Box 3 -->
             <div class="info-box">
                 <i class='bx bxs-envelope' ></i>
-                <span>demo@gmail.com</span>
+                <span> Contact below ⬇️</span>
             </div>
         </div>
         <div class="footer-social">
             <a href="https://www.linkedin.com/in/hembahadurgurung555/"><i class='bx bxl-linkedin' ></i></a>
-            <a href="https://hem-bahadur-gurung5739.medium.com/"><i class='bx bxl-medium' ></i></a>
+            <a href="https://hembahadurgurung.medium.com/nepal-set-new-world-record-lap-time-of-7-062-sec-at-the-first-ever-deep-racer-league-nepal-in-2022-85feeb86fc3a/"><i class='bx bxl-medium' ></i></a>
             <a href="https://www.youtube.com/watch?v=T9QVW1ndP_E/"><i class='bx bxl-youtube' ></i></a> 
         </div>
  
