--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Portfolio Website</title>
+    <title>HBG</title>
     <!-- Link To CSS -->
     <link rel="stylesheet" href="./css/style.css">
     <!-- Box Icons -->
@@ -65,15 +65,15 @@
                 <img src="profile.jpg" alt="">
             </div>
             <div class="about-text">
-                <p>Highly motivated AI Engineer with one year of experience in deep learning and data analytics projects. Seeking a challenging position to apply my skills and knowledge in developing innovative AI solutions.</p>
+                <p>I love to train deep neural networks on large datasets</p>
                 <div class="information">
                     <!-- Box 1 -->
                     <div class="info-box">
-                        <i class='bx bxs-user' ></i>
-                        <span>Hem Bahadur Gurung</span>
+                        <!--<i class='bx bxs-user' ></i>
+                        <!--<span>Hem Bahadur Gurung</span>
                     </div>
                     <!-- Box 2 -->
-                    <div class="info-box">
+                    <!--<div class="info-box">
                         <i class='bx bxs-phone' ></i>
                         <span>+977-9801013770</span>
                     </div>
