--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
  
     <section class="home" id="home">
         <div class="social">
-            <a href="https://github.com/Hem5555"><i class='bx bxl-github'></i></a>
+            <a href="https://github.com/HEEMG"><i class='bx bxl-github'></i></a>
             <a href="#"><i class='bx bxl-dribbble' ></i></a>
             <a href="#"><i class='bx bxl-behance' ></i></a>
         </div>
@@ -80,7 +80,7 @@
                     <!-- Box 3 -->
                     <div class="info-box">
                         <i class='bx bxs-envelope' ></i>
-                        <span>query.hem@gmail.com</span>
+                        <!-- <span>query.hem@gmail.com</span> -->
                     </div>
                 </div>
                 <a href="#" class="btn">Download Cv</a>
