--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
                         <!--<span>Hem Bahadur Gurung</span>
                     </div>
                     <!-- Box 2 -->
-                    <!--<div class="info-box">
-                        <i class='bx bxs-phone' ></i>
-                        <span>+977-9801013770</span>
+                    
                     </div>
                     <!-- Box 3 -->
                     <div class="info-box">
@@ -99,41 +97,41 @@
                 <!-- Box 1 -->
                 <div class="bars-box">
                     <h3>Algorithm</h3>
-                    <span>60%</span>
+                    <!-- <span>60%</span> -->
                     <div class="light-bar"></div>
                     <div class="percent-bar html-bar"></div>
                 </div>
                 <!-- Box 2 -->
                 <div class="bars-box">
                     <h3>Python</h3>
-                    <span>84%</span>
+                    <!-- <span>84%</span> -->
                     <div class="light-bar"></div>
                     <div class="percent-bar css-bar"></div>
                 </div>
                 <!-- Box 3 -->
                 <div class="bars-box">
                     <h3>JavaScript</h3>
-                    <span>50%</span>
+                    <!-- <span>50%</span> -->
                     <div class="light-bar"></div>
                     <div class="percent-bar js-bar"></div>
                 </div>
                 <!-- Box 4 -->
                 <div class="bars-box">
                     <h3>React</h3>
-                    <span>70%</span>
+                    <!-- <span>70%</span> -->
                     <div class="light-bar"></div>
                     <div class="percent-bar react-bar"></div>
                 </div>
                 <!-- Box 5 -->
                 <div class="bars-box">
                     <h3>PyTorch</h3>
-                    <span>80%</span>
+                    <!-- <span>80%</span> -->
                     <div class="light-bar"></div>
                     <div class="percent-bar PyTorch-bar"></div>
                 </div>
                 <div class="bars-box">
                     <h3>Tensorflow</h3>
-                    <span>60%</span>
+                    <!-- <span>60%</span> -->
                     <div class="light-bar"></div>
                     <div class="percent-bar Tensorflow-bar"></div>
                 </div>
@@ -211,19 +209,19 @@
         </div>
     </section>
     <!-- Contact -->
-    <section class="contact" id="contact">
+    <!-- <section class="contact" id="contact">
         <div class="heading">
             <h2>Contact</h2>
             <span>Keep in Touch</span>
-        </div>
-        <div class="contact-form">
+        </div> -->
+        <!-- <div class="contact-form">
             <form action="">
                 <input type="text" placeholder="Your Name">
                 <input type="email" name="" id="" placeholder="Your Email">
                 <textarea name="" id="" cols="30" rows="10" placeholder="Write Message Here..."></textarea>
                 <input type="button" value="Send" class="contact-button">
             </form>
-        </div>
+        </div> -->
     </section>
     <!-- Footer -->
     <div class="footer">
@@ -231,8 +229,6 @@
         <div class="footer-social">
             <a href="https://www.linkedin.com/in/hembahadurgurung555/"><i class='bx bxl-linkedin' ></i></a>
             <a href="https://hembahadurgurung.medium.com/nepal-set-new-world-record-lap-time-of-7-062-sec-at-the-first-ever-deep-racer-league-nepal-in-2022-85feeb86fc3a/"><i class='bx bxl-medium' ></i></a>
-            <a href="https://www.youtube.com/watch?v=T9QVW1ndP_E/"><i class='bx bxl-youtube' ></i></a>
-            
         </div>
  
     </div>
