--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#services">Services</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contact">Contact</a></li>
             <div class="bx bx-moon" id="darkmode"></div>
         </ul>
     </header>
@@ -69,15 +67,10 @@
                 <div class="information">
                     <!-- Box 1 -->
                     <div class="info-box">
-                        <!--<i class='bx bxs-user' ></i>
-                        <!--<span>Hem Bahadur Gurung</span>
-                    </div>
-                    <!-- Box 2 -->
-                    
                     </div>
                     <!-- Box 3 -->
                     <div class="info-box">
-                        <i class='bx bxs-envelope' ></i>
+                        <!-- <i class='bx bxs-envelope' ></i> -->
                         <!-- <span>query.hem@gmail.com</span> -->
                     </div>
                 </div>
@@ -148,37 +141,6 @@
             <h2>Services</h2>
             <span>Our Services</span>
         </div>
-        <div class="services-content">
-            <!-- Box 1 -->
-            <div class="services-box">
-                <i class='bx bx-code-alt' ></i>
-                <h3>Web Development</h3>
-                <a href="#">Learn More</a>
-            </div>
-            <!-- Box 2 -->
-            <div class="services-box">
-                <i class='bx bx-server' ></i>
-                <h3>Backend Development</h3>
-                <a href="#">Learn More</a>
-            </div>
-            <!-- Box 3 -->
-            <div class="services-box">
-                <i class='bx bx-cloud' ></i>
-                <h3>Cloud Computing</h3>
-                <a href="#">Learn More</a>
-            </div>
-
-            <div class="services-box">
-                <i class='bx bxl-ai' ></i>
-                <h3>Artificial Intelligence</h3>
-                <a href="#">Learn More</a>
-            </div>
-            <div class="services-box">
-                <i class='bx bxl-data' ></i>
-                <h4>Data Science</h4>
-                <a href="#">Learn More</a>
-            </div>
-        </div>
     </section>
     <!-- Portfolio -->
     <section class="portfolio" id="portfolio">
@@ -207,21 +169,6 @@
             </div>
             
         </div>
-    </section>
-    <!-- Contact -->
-    <!-- <section class="contact" id="contact">
-        <div class="heading">
-            <h2>Contact</h2>
-            <span>Keep in Touch</span>
-        </div> -->
-        <!-- <div class="contact-form">
-            <form action="">
-                <input type="text" placeholder="Your Name">
-                <input type="email" name="" id="" placeholder="Your Email">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Write Message Here..."></textarea>
-                <input type="button" value="Send" class="contact-button">
-            </form>
-        </div> -->
     </section>
     <!-- Footer -->
     <div class="footer">
