--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h1>Hem Bahadur Gurung</h1>
             <h2>AI Engineer</h2>
             <p>
-                I am a highly passionate and driven individual with a strong interest in working on computer vision and natural language processing (NLP) projects. </p>
+                I am  an AI Practitioner </p>
             <a href="#contact" class="btn">Contact Me</a>
             <a href="#portfolio" class="btn">Portfolio</a>
         </div>
@@ -134,13 +134,6 @@
             </div>
         </div>
  
-    </section>
-    <!-- Services -->
-    <section class="services" id="services">
-        <div class="heading">
-            <h2>Services</h2>
-            <span>Our Services</span>
-        </div>
     </section>
     <!-- Portfolio -->
     <section class="portfolio" id="portfolio">
