--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
     <section class="about" id="about">
         <div class="heading">
             <h2>About Me</h2>
-            <span>Introduction</span>
         </div>
         <!-- About Content -->
         <div class="about-container">
@@ -74,7 +73,7 @@
                         <!-- <span>query.hem@gmail.com</span> -->
                     </div>
                 </div>
-                <a href="#" class="btn">Download Cv</a>
+                <!-- <a href="#" class="btn">Download Cv</a> -->
             </div>
         </div>
     </section>
