--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
         <div class="home-text">
             <span>Hello, I'm</span>
             <h1>Hem Bahadur Gurung</h1>
-            <h2>AI Engineer</h2>
             <p>
-                I am  an AI Practitioner </p>
+                I am  an AI Practitioner & AI engineer </p>
             <a href="#contact" class="btn">Contact Me</a>
             <a href="#portfolio" class="btn">Portfolio</a>
         </div>
@@ -146,20 +145,7 @@
                 <img src="blog-2.jpg" alt="">
                 <p class="subtext">Datascience project.</p>
                 <p class="subtext"><a class="project-link" href="#">View here</a></p>
-            </div>
-            <div class="portfolio-img">
-                <h4>Hand Gesture mouse using Deep Learning</h4>
-                <img src="blog-3.jpg" alt="">
-                <p class="subtext">Computer Vision Project</p>
-                <p class="subtext"><a class="project-link" href="#">View here</a></p>
-            </div>
-            <div class="portfolio-img">
-                <h5>Grafana Dash Board Visualization</h5>
-                <img src="blog-5.jpg" alt="">
-                <p class="subtext">Data Analytic Project</p>
-                <p class="subtext"><a class="project-link" href="#">View here</a></p>
-            </div>
-            
+            </div>       
         </div>
     </section>
     <!-- Footer -->
