--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
         </div>
         <div class="portfolio-content">
             <div class="portfolio-img">
-                <h3>Ethereum Datascience Project</h3>
+                <!-- <h3>Ethereum Datascience Project</h3> -->
                 <img src="blog-2.jpg" alt="">
-                <p class="subtext">Datascience project.</p>
-                <p class="subtext"><a class="project-link" href="#">View here</a></p>
+                <!-- <p class="subtext">Datascience project.</p> -->
+                <!-- <p class="subtext"><a class="project-link" href="#">View here</a></p> -->
             </div>       
         </div>
     </section>
