--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="percent-bar PyTorch-bar"></div>
                 </div>
                 <div class="bars-box">
-                    <h3>Tensorflow</h3>
+                    <h3>Computer Vision Research Intern(May 2021 - Aug 2021)</h3>
                     <!-- <span>60%</span> -->
                     <div class="light-bar"></div>
                     <div class="percent-bar Tensorflow-bar"></div>
